syntax = "proto3";
package shikanime.elkia.eventing.v1alpha1;

import "pkg/api/eventing/v1alpha1/client.proto";
import "pkg/api/fleet/v1alpha1/presence.proto";
import "pkg/api/world/v1alpha1/lobby.proto";
import "pkg/api/world/v1alpha1/combat.proto";

option go_package = "go.shikanime.studio/elkia/pkg/api/eventing/v1alpha1";

message ChannelCommand {
    oneof command {
      shikanime.elkia.eventing.v1alpha1.ClientCommand client = 1;
      shikanime.elkia.fleet.v1alpha1.PresenceCommand presence = 2;
      shikanime.elkia.world.v1alpha1.LobbyCommand lobby = 3;
      shikanime.elkia.world.v1alpha1.CombatCommand combat_event = 4;
    }
}

message ChannelInteractRequest {
    uint32 sequence = 1;
    ChannelCommand command = 2;
}

message ChannelEvent {
  oneof event {
    shikanime.elkia.eventing.v1alpha1.ClientEvent client = 1;
    shikanime.elkia.fleet.v1alpha1.PresenceEvent presence = 2;
    shikanime.elkia.world.v1alpha1.LobbyEvent lobby = 3;
    shikanime.elkia.world.v1alpha1.CombatEvent combat = 4;
  }
}

service Gateway {
  // ChannelInteract is a bi-directional stream that is used to interact with
  // the channel server
  rpc ChannelInteract(stream ChannelInteractRequest)
      returns (stream ChannelEvent);
}
